# flux2-lora-toolkit

./: .coverage  .gitignore  CLAUDE.md  ENHANCED_UI_FEATURES.md  FLUX2_LIMITATIONS_RESEARCH.md  LORA_CREATION_AUDIT.md  PYTHON_3.14_INSTALLATION_GUIDE.md  README.md  SESSION_SUMMARY.md  app.py  cli.py  coverage.xml  diagnostic.py  export_lora.py  pyproject.toml  test_lora.py  test_optimization.py  test_training_debug.py  verify_model.py
configs/: base_config.yaml  schema.json
configs/presets/: character.yaml  concept.yaml  style.yaml
examples/sample_dataset/: image_001.txt
examples/scripts/: train_example.sh
exports/: results_1766121734.json
output/checkpoints/: best  registry.json
output/checkpoints/step_00000418/: metadata.json  scheduler_state.pt
output/checkpoints/step_00000500/: metadata.json  scheduler_state.pt
output/checkpoints/step_00000600/: metadata.json  scheduler_state.pt
output/checkpoints/step_00000900/: metadata.json  scheduler_state.pt
output/checkpoints/step_00001000/: metadata.json  scheduler_state.pt
output/checkpoints/step_00001200/: adapter_config.json  metadata.json  scheduler_state.pt
output/checkpoints/step_00001500/: README.md  metadata.json  scheduler_state.pt
output/checkpoints/step_00001800/: metadata.json  scheduler_state.pt
output/logs/: events.out.tfevents.1766946500.jenga-vm.25346.0  events.out.tfevents.1766946827.jenga-vm.26631.0  events.out.tfevents.1766957398.jenga-vm.28617.0
output/logs/system_hardware_cpu_memory_percent/: events.out.tfevents.1766946858.jenga-vm.26631.20  events.out.tfevents.1766957427.jenga-vm.28617.20
output/logs/system_hardware_cpu_percent/: events.out.tfevents.1766946858.jenga-vm.26631.19  events.out.tfevents.1766957427.jenga-vm.28617.19
output/logs/system_hardware_gpu_memory_allocated_mb/: events.out.tfevents.1766946858.jenga-vm.26631.21  events.out.tfevents.1766957427.jenga-vm.28617.21
output/logs/system_hardware_gpu_memory_reserved_mb/: events.out.tfevents.1766946858.jenga-vm.26631.22  events.out.tfevents.1766957427.jenga-vm.28617.22
output/logs/system_resources_memory_usage_mb/: events.out.tfevents.1766946858.jenga-vm.26631.6  events.out.tfevents.1766957427.jenga-vm.28617.6
output/logs/system_resources_step_time/: events.out.tfevents.1766946858.jenga-vm.26631.4  events.out.tfevents.1766957427.jenga-vm.28617.4
output/logs/system_resources_steps_per_sec/: events.out.tfevents.1766946858.jenga-vm.26631.5  events.out.tfevents.1766957427.jenga-vm.28617.5
output/logs/training_learning_grad_norm/: events.out.tfevents.1766946858.jenga-vm.26631.3  events.out.tfevents.1766957427.jenga-vm.28617.3
output/logs/training_learning_learning_rate/: events.out.tfevents.1766946858.jenga-vm.26631.2  events.out.tfevents.1766957427.jenga-vm.28617.2
output/logs/training_loss_loss/: events.out.tfevents.1766946858.jenga-vm.26631.1  events.out.tfevents.1766957427.jenga-vm.28617.1
output/logs/training_parameters_grad_norm_avg/: events.out.tfevents.1766946858.jenga-vm.26631.10  events.out.tfevents.1766957427.jenga-vm.28617.10
output/logs/training_parameters_grad_norm_l2/: events.out.tfevents.1766946858.jenga-vm.26631.8  events.out.tfevents.1766957427.jenga-vm.28617.8
output/logs/training_parameters_grad_norm_max/: events.out.tfevents.1766946858.jenga-vm.26631.9  events.out.tfevents.1766957427.jenga-vm.28617.9
output/logs/training_parameters_grad_norm_std/: events.out.tfevents.1766946858.jenga-vm.26631.11  events.out.tfevents.1766957427.jenga-vm.28617.11
output/logs/training_parameters_lora_param_count/: events.out.tfevents.1766946858.jenga-vm.26631.12  events.out.tfevents.1766957427.jenga-vm.28617.12
output/logs/training_parameters_lora_param_max/: events.out.tfevents.1766946858.jenga-vm.26631.16  events.out.tfevents.1766957427.jenga-vm.28617.16
output/logs/training_parameters_lora_param_mean/: events.out.tfevents.1766946858.jenga-vm.26631.14  events.out.tfevents.1766957427.jenga-vm.28617.14
output/logs/training_parameters_lora_param_min/: events.out.tfevents.1766946858.jenga-vm.26631.17  events.out.tfevents.1766957427.jenga-vm.28617.17
output/logs/training_parameters_lora_param_percentage/: events.out.tfevents.1766946858.jenga-vm.26631.13  events.out.tfevents.1766957427.jenga-vm.28617.13
output/logs/training_parameters_lora_param_std/: events.out.tfevents.1766946858.jenga-vm.26631.15  events.out.tfevents.1766957427.jenga-vm.28617.15
output/logs/training_parameters_loss/: events.out.tfevents.1766946858.jenga-vm.26631.7  events.out.tfevents.1766957427.jenga-vm.28617.7
output/logs/training_parameters_total_param_count/: events.out.tfevents.1766946858.jenga-vm.26631.18  events.out.tfevents.1766957427.jenga-vm.28617.18
scripts/: validate_dataset.py
src/flux2_lora/: __init__.py
src/flux2_lora/core/: __init__.py  lora_config.py  model_loader.py  optimizer.py  trainer.py
src/flux2_lora/data/: __init__.py  augmentation.py  caption_utils.py  dataset.py  validation.py
src/flux2_lora/evaluation/: __init__.py  checkpoint_compare.py  prompt_testing.py  quality_metrics.py
src/flux2_lora/monitoring/: __init__.py  callbacks.py  logger.py  metrics.py  validator.py
src/flux2_lora/optimization/: __init__.py  (+1 more)
src/flux2_lora_training_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+15 files in other folders)
