[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flux2-lora-training-toolkit"
version = "0.1.0"
description = "A comprehensive toolkit for training high-quality LoRA models for Flux2-dev"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Flux2 LoRA Toolkit Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.14"
keywords = ["machine-learning", "diffusion-models", "lora", "flux2", "stable-diffusion", "training"]

dependencies = [
    # Core ML/Training
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "diffusers>=0.27.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "peft>=0.10.0",
    
    # Data Processing
    "pillow>=10.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Configuration and Utilities
    "pyyaml>=6.0",
    "jsonschema>=4.17.0",
    "python-dotenv>=1.0.0",
    "toml>=0.10.2",
    
    # UI and CLI
    "gradio>=4.0.0",
    "gradio-modal>=0.0.4",
    "typer>=0.9.0",
    "rich>=13.0.0",
    
    # Monitoring and Logging
    "tensorboard>=2.15.0",
    "wandb>=0.16.0",  # Optional
    "tqdm>=4.66.0",
    
    # Security and Safety
    "safetensors>=0.4.0",
    
    # Development and Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",  # Parallel testing
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

optimization = [
    "xformers>=0.0.23",  # Memory efficient attention (optional)
    "flash-attn>=2.5.0",  # Flash Attention (requires CUDA)
    "optuna>=3.5.0",      # Hyperparameter optimization
]

[project.urls]
Homepage = "https://github.com/your-org/flux2-lora-training-toolkit"
Repository = "https://github.com/your-org/flux2-lora-training-toolkit"
Documentation = "https://flux2-lora-training-toolkit.readthedocs.io"
"Bug Tracker" = "https://github.com/your-org/flux2-lora-training-toolkit/issues"

[project.scripts]
flux2-lora = "flux2_lora.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flux2_lora = ["configs/*.yaml", "configs/presets/*.yaml", "configs/schema.json"]

# Ruff configuration
[tool.ruff]
target-version = "py314"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["flux2_lora"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "diffusers.*",
    "transformers.*",
    "accelerate.*",
    "peft.*",
    "gradio.*",
    "wandb.*",
    "tensorboard.*",
    "xformers.*",
    "flash_attn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/flux2_lora",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/flux2_lora"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]